--- a/portfolio/src/NavBar/NavBar.css
+++ b/portfolio/src/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 #navBar {
   display: -ms-grid;
   display: grid;
-  min-height: 100px;
+  min-height: 5vh;
   grid-auto-flow: column;
   background-color: #111;
 }
