--- a/portfolio/src/NavBar/NavBar.scss
+++ b/portfolio/src/NavBar/NavBar.scss
@@ -1,6 +1,6 @@
 #navBar{
     display:grid;
-    min-height:100px;
+    min-height:5vh;
     grid-auto-flow: column;
     background-color:#111;
     #logo{
