--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,8 +1,14 @@
 .App {
   text-align: center;
   background-color: #111;
+  display:flex;
+  min-height:100vh;
+  flex-direction:column;
 }
-
+hr{
+  width:100%;
+  margin:0;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
