--- a/portfolio/src/Footer/Footer.scss
+++ b/portfolio/src/Footer/Footer.scss
@@ -1,7 +1,14 @@
-.footer{
+#footer{
     width: 100%;
-    display: inline-flex;
-    justify-content: center;
+    // display: inline-flex;
+    // justify-content: center;
+    min-height: 5vh;
+    background-color:blue;
+    display:flex;
+    flex-direction: column;
+    -ms-flex-direction: column;
+    align-content: flex-end;
+
     a{
         text-decoration:none;
         margin-right: 20px;
@@ -18,7 +25,9 @@
     a .linkedin{
         color: #2867b2;
     } 
-    a .reddit, .twitter, .facebook, .linkedin, .instagram{
+    .github{
+        vertical-align: middle;
+        color:#daa;
         opacity: 60%;
         -moz-opacity: 0.6;
         -webkit-opacity: 0.6;
@@ -26,7 +35,7 @@
         -moz-transition: opacity .2s ease-in;
         -webkit-transition: opacity .2s ease-in; 
     }
-    a :hover{
+    .github:hover{
         opacity: 100%;
         -moz-opacity: 1;
         -webkit-opacity: 1;
@@ -37,4 +46,5 @@
     display:flex;
     justify-content: center;
     color: #f2a;
+    margin: auto auto;
 }
