--- a/Portfolio/src/Footer/Footer.css
+++ b/Portfolio/src/Footer/Footer.css
@@ -1,7 +1,7 @@
 #footer {
   width: 100%;
   min-height: 5vh;
-  background-color: blue;
+  background-color: #f1730c;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -9,13 +9,10 @@
   -webkit-box-direction: normal;
           flex-direction: column;
   -ms-flex-direction: column;
-  -ms-flex-line-pack: end;
-      align-content: flex-end;
 }
 
 #footer a {
   text-decoration: none;
-  margin-right: 20px;
 }
 
 #footer a .reddit {
@@ -36,13 +33,14 @@
 
 #footer .github {
   vertical-align: middle;
-  color: #daa;
-  opacity: 60%;
-  -moz-opacity: 0.6;
-  -webkit-opacity: 0.6;
-  transition: opacity .2s ease-in;
-  -moz-transition: opacity .2s ease-in;
-  -webkit-transition: opacity .2s ease-in;
+  color: #000;
+  opacity: 50%;
+  -moz-opacity: 0.5;
+  -webkit-opacity: 0.5;
+  transition: opacity .4s ease-in;
+  -moz-transition: opacity .4s ease-in;
+  -webkit-transition: opacity .4s ease-in;
+  background-color: red;
 }
 
 #footer .github:hover {
@@ -59,7 +57,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #f2a;
-  margin: auto auto;
+  color: #000;
 }
 /*# sourceMappingURL=Footer.css.map */
