--- a/Portfolio/src/Footer/Footer.scss
+++ b/Portfolio/src/Footer/Footer.scss
@@ -3,15 +3,13 @@
     // display: inline-flex;
     // justify-content: center;
     min-height: 5vh;
-    background-color:blue;
+    background-color:rgb(241, 115, 12);
     display:flex;
     flex-direction: column;
     -ms-flex-direction: column;
-    align-content: flex-end;
 
     a{
         text-decoration:none;
-        margin-right: 20px;
     }
     a .reddit{
         color: #FF5700;
@@ -27,13 +25,14 @@
     } 
     .github{
         vertical-align: middle;
-        color:#daa;
-        opacity: 60%;
-        -moz-opacity: 0.6;
-        -webkit-opacity: 0.6;
-        transition: opacity .2s ease-in;
-        -moz-transition: opacity .2s ease-in;
-        -webkit-transition: opacity .2s ease-in; 
+        color: #000;
+        opacity: 50%;
+        -moz-opacity: 0.5;
+        -webkit-opacity: 0.5;
+        transition: opacity .4s ease-in;
+        -moz-transition: opacity .4s ease-in;
+        -webkit-transition: opacity .4s ease-in; 
+        background-color:red;
     }
     .github:hover{
         opacity: 100%;
@@ -45,6 +44,6 @@
     font-size: 1.5rem;
     display:flex;
     justify-content: center;
-    color: #f2a;
-    margin: auto auto;
+    color: #000;
+    
 }
