--- a/Portfolio/src/NavBar/NavBar.scss
+++ b/Portfolio/src/NavBar/NavBar.scss
@@ -5,7 +5,7 @@
     background-color:#111;
     #logo{
         display:grid;
-        background-color:#f2a;
+        background-color:rgb(241, 115, 12);
         justify-content: center;
         align-content: center;
     }
@@ -22,7 +22,7 @@
             margin: 2px;
             background-color: #111;
             text-decoration: none;
-            color: yellow;
+            color: rgb(241, 115, 12);
         }
         a:hover{    
             box-shadow: 0 0 15px 3px yellow;
