--- a/FrontEnd/src/Projects/ProjectSpread/Styling/ProjectSpread.css
+++ b/FrontEnd/src/Projects/ProjectSpread/Styling/ProjectSpread.css
@@ -1,3 +1,9 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
 #spread {
   width: 80vw;
   margin: 1em auto;
@@ -5,8 +11,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
 }
 
 #spread > #project {
@@ -15,8 +21,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 0 2px;
   border: 1px solid #f1f1f1;
   font-size: 1em;
@@ -27,6 +33,6 @@
 
 #spread > #project:hover {
   -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 /*# sourceMappingURL=ProjectSpread.css.map */
