--- a/FrontEnd/src/SkillsContainer/Styling/Skills.css
+++ b/FrontEnd/src/SkillsContainer/Styling/Skills.css
@@ -1,3 +1,9 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
 .skillsContainer {
   color: #f1f1f1;
@@ -18,10 +24,10 @@
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
   margin-top: auto;
 }
 
@@ -32,8 +38,8 @@
   width: fit-content;
   margin: 10px 10px;
   -webkit-box-flex: 1;
-      -ms-flex: 1 4 50vw;
-          flex: 1 4 50vw;
+  -ms-flex: 1 4 50vw;
+  flex: 1 4 50vw;
   font-size: 1.1em;
 }
 
