--- a/FrontEnd/src/Contact/Styling/Contact.css
+++ b/FrontEnd/src/Contact/Styling/Contact.css
@@ -1,7 +1,13 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #contactContainer {
@@ -11,9 +17,9 @@
   display: grid;
       grid-template-areas: "logo cta ." "  .  cta contact";
   -ms-grid-rows: 2fr 1fr;
-      grid-template-rows: 2fr 1fr;
+  grid-template-rows: 2fr 1fr;
   -ms-grid-columns: 1fr 2fr 1fr;
-      grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
 }
 
 #contactContainer .content {
@@ -131,8 +137,8 @@
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     margin: 0 1em;
     padding: 0;
     min-height: calc(100vh - 50px);
@@ -144,8 +150,8 @@
   #contactContainer > #callToAction {
     width: calc(100vw - 2em - 10%);
     -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    -ms-flex: 1;
+    flex: 1;
   }
   #contactContainer > #info {
     height: 90px;
