--- a/FrontEnd/src/Projects/ProjectSpread/Styling/ProjectSpread.scss
+++ b/FrontEnd/src/Projects/ProjectSpread/Styling/ProjectSpread.scss
@@ -1,15 +1,30 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 $black-text: #0f0e0c;
 $white-background: #f1f1f1;
 $blue-logo-color: #00c2cb;
 #spread {
   width: 80vw;
   margin: 1em auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   & > #project {
     background-color: $black-text;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 0 2px;
     border: 1px solid $white-background;
     font-size: 1em;
@@ -18,6 +33,8 @@ $blue-logo-color: #00c2cb;
     margin: 0.5px;
   }
   & > #project:hover {
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
   }
 }
