--- a/FrontEnd/src/Home/styling/home.css
+++ b/FrontEnd/src/Home/styling/home.css
@@ -10,10 +10,10 @@
   min-width: 100vw;
   min-height: 100vh;
   position: absolute;
-  opacity: 60%;
   background-color: black;
   top: 0;
   left: 0;
+  opacity: 0.6;
 }
 
 .home {
@@ -46,7 +46,6 @@
 
 .home > #homepage > .role {
   color: #f1f1f1;
-  opacity: 90%;
   text-shadow: 1px 1px #0f0e0c;
   position: relative;
 }
@@ -108,7 +107,6 @@
 .home > #homepage > .callToAction > .CTAButton {
   position: relative;
   background-color: #f1f1f1;
-  opacity: 95%;
   width: 150px;
 }
 
