--- a/FrontEnd/src/Contact/Styling/Contact.css
+++ b/FrontEnd/src/Contact/Styling/Contact.css
@@ -4,6 +4,12 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
 * {
   -webkit-box-sizing: border-box;
@@ -98,7 +104,7 @@
 
 #callToAction #inputs {
   border: 1px solid #00c2cb;
-  margin-bottom: 15px;
+  padding: 0 10px 15px 10px;
 }
 
 #callToAction #inputs > label {
@@ -108,12 +114,14 @@
 #callToAction #inputs input {
   width: 100%;
   height: 2rem;
-  font-size: 1rem;
+  font-size: 1em;
   display: inline-block;
   border: none;
   background: #f1f1f1;
   overflow: auto;
   padding: 2px;
+  color: black;
+  margin: 5px 0;
 }
 
 #callToAction #inputs textarea[name="body"] {
@@ -122,12 +130,23 @@
   overflow: auto;
   resize: none;
   padding: 3px;
+  font-size: 1em;
+  margin: 5px 0;
 }
 
 #callToAction #inputs > button {
   height: 2.5em;
   width: 6em;
   background-color: #00c2cb;
+  border-radius: 15%;
+  color: #0f0e0c;
+  font-size: 0.8em;
+}
+
+#callToAction #inputs > button:hover {
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+  border: 1px solid #f1f1f1;
 }
 
 @media only screen and (max-width: 1000px) {
