--- a/FrontEnd/src/Contact/Styling/Contact.scss
+++ b/FrontEnd/src/Contact/Styling/Contact.scss
@@ -5,6 +5,13 @@
 * Browsers: last 4 version
 */
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 $black-text: #0f0e0c;
 $white-background: #f1f1f1;
 $blue-logo-color: #00c2cb;
@@ -20,7 +27,7 @@ $blue-logo-color: #00c2cb;
   overflow: hidden;
   display: -ms-grid;
   display: grid;
-      grid-template-areas:
+          grid-template-areas:
     "logo cta ."
     "  .  cta contact";
   -ms-grid-rows: 2fr 1fr;
@@ -97,19 +104,21 @@ $blue-logo-color: #00c2cb;
   }
   #inputs {
     border: 1px solid $blue-logo-color;
-    margin-bottom: 15px;
+    padding: 0 10px 15px 10px;
     & > label {
       text-align: left;
     }
     input {
       width: 100%;
       height: 2rem;
-      font-size: 1rem;
+      font-size: 1em;
       display: inline-block;
       border: none;
       background: $white-background;
       overflow: auto;
       padding: 2px;
+      color:black;
+      margin: 5px 0;
     }
     textarea[name="body"] {
       width: 100%;
@@ -117,12 +126,25 @@ $blue-logo-color: #00c2cb;
       overflow: auto;
       resize: none;
       padding: 3px;
+      font-size: 1em;
+      margin: 5px 0;
     }
 
     & > button {
       height: 2.5em;
       width: 6em;
       background-color: $blue-logo-color;
+      border-radius: 15%;
+      color:$black-text;
+      font-size: 0.8em;
+    }
+
+    & > button:hover{
+      -webkit-transform: scale(0.9);
+          -ms-transform: scale(0.9);
+              transform: scale(0.9);
+      border: 1px solid $white-background;
+
     }
   }
 }
