--- a/FrontEnd/src/Home/styling/home.css
+++ b/FrontEnd/src/Home/styling/home.css
@@ -7,13 +7,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
 .home:before {
   content: "";
-  min-width: 100vw;
-  min-height: 100vh;
+  min-width: 100%;
+  min-height: 100%;
   position: absolute;
   background-color: black;
   top: 0;
   left: 0;
   opacity: 0.6;
+  z-index: 0;
 }
 
 .home {
