--- a/FrontEnd/src/Projects/Styling/Projects.css
+++ b/FrontEnd/src/Projects/Styling/Projects.css
@@ -5,8 +5,26 @@
 * Browsers: last 4 version
 */
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
+.outerContainer:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #0d1128;
+  top: 0;
+  left: 0;
+  opacity: 0.85;
+  z-index: 0;
+}
+
 .outerContainer {
   min-height: calc(100vh - 50px);
+  background-image: url("../../images/test.png");
+  background-size: 100% 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  position: relative;
 }
 
 .outerContainer .content {
@@ -15,6 +33,11 @@
 
 .outerContainer .titles {
   font-family: "Playfair Display", serif;
+}
+
+.outerContainer > .projectsContainer {
+  position: relative;
+  z-index: 1;
 }
 
 .outerContainer > .projectsContainer > #title {
@@ -50,7 +73,8 @@
 
 .outerContainer > .projectsContainer > .activeProject > .project > #info {
   font-size: 1.1em;
-  margin: 0 3px;
+  margin: 0 10px;
+  text-align: justify;
 }
 
 .outerContainer > .projectsContainer > .activeProject > .project > #info > #desc {
@@ -58,7 +82,8 @@
 }
 
 .outerContainer > .projectsContainer > .activeProject > .project > #info > #graph {
-  margin: 5px 0;
+  margin: 10px auto;
+  display: block;
 }
 
 .outerContainer > .projectsContainer > .activeProject > .project > #info > #skills {
@@ -102,5 +127,11 @@
   position: fixed;
   right: 1vw;
   top: 40vh;
+}
+
+@media only screen and (min-width: 750px) {
+  .outerContainer {
+    padding-top: 12vh;
+  }
 }
 /*# sourceMappingURL=Projects.css.map */
