--- a/FrontEnd/src/SkillsContainer/Styling/Skills.css
+++ b/FrontEnd/src/SkillsContainer/Styling/Skills.css
@@ -5,18 +5,40 @@
 * Browsers: last 4 version
 */
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
+.skillsContainer:before {
+  content: "";
+  min-width: 100%;
+  min-height: 100%;
+  position: absolute;
+  background-color: #0d1128;
+  top: 0;
+  left: 0;
+  opacity: 0.8;
+  z-index: 0;
+}
+
 .skillsContainer {
+  z-index: 1;
+  background: #0f0e0c url("../../images/astro.png") no-repeat;
+  background-size: 100% 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  min-height: calc(100vh - 50px);
   color: #f1f1f1;
   position: relative;
-  min-height: calc(100vh - 50px);
+  padding-bottom: .1em;
 }
 
 .skillsContainer .content {
   font-family: "Courier Prime", monospace;
+  text-shadow: -2px 2px 4px #0f0e0c;
 }
 
 .skillsContainer .titles {
   font-family: "Playfair Display", serif;
+  position: relative;
+  text-shadow: -2px 2px 4px #0f0e0c;
 }
 
 .skillsContainer > .skillGrouping {
@@ -29,6 +51,7 @@
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
   margin-top: auto;
+  position: relative;
 }
 
 .skillsContainer > .skillGrouping > .skillList {
@@ -36,34 +59,34 @@
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin: 10px 10px;
+  margin: 7px 10px;
   -webkit-box-flex: 1;
   -ms-flex: 1 4 50vw;
   flex: 1 4 50vw;
-  font-size: 1.1em;
+  font-size: 1.3em;
+  position: relative;
+  z-index: 1;
 }
 
 .skillsContainer > .skillGrouping > .skillList > .skill {
   color: #00c2cb;
-  font-size: 1em;
-}
-
-.skillsContainer > #bottom_images > .binary {
+  font-weight: 600;
+  font-size: 0.9em;
   position: relative;
-  z-index: 0;
-  padding-top: 40px;
-  width: 80vw;
+  z-index: 1;
+  margin-bottom: 2px;
 }
 
-.skillsContainer > #bottom_images > .hands {
-  position: absolute;
-  width: 80px;
-  left: calc(50% - 40px);
-  background-color: #0f0e0c;
-  bottom: 0;
-  padding: 0;
-  margin: 0;
-  height: 60px;
-  z-index: 1;
+.skillsContainer > #bottom_images > #logos {
+  margin: 10px 0;
+  color: #f1f1f1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  font-size: 1.5em;
+  position: relative;
 }
 /*# sourceMappingURL=Skills.css.map */
