--- a/FrontEnd/src/SkillsContainer/Styling/Skills.scss
+++ b/FrontEnd/src/SkillsContainer/Styling/Skills.scss
@@ -10,62 +10,86 @@
 $black-text: #0f0e0c;
 $white-background: #f1f1f1;
 $blue-logo-color: #00c2cb;
+.skillsContainer:before {
+  content: "";
+  min-width: 100%;
+  min-height: 100%;
+  position: absolute;
+  background-color: rgb(13, 17, 40);
+  top: 0;
+  left: 0;
+  opacity: 0.8;
+  z-index: 0;
+}
 .skillsContainer {
+  z-index: 1;
+  background: #0f0e0c url("../../images/astro.png") no-repeat;
+  background-size: 100% 100%;
+  object-fit: cover;
+  width: 100%;
+  min-height: calc(100vh - 50px);
   color: $white-background;
   position: relative;
-  min-height: calc(100vh - 50px);
+  padding-bottom: .1em;
   .content {
     font-family: "Courier Prime", monospace;
+  text-shadow: -2px 2px 4px $black-text;
+
   }
   .titles {
     font-family: "Playfair Display", serif;
+    position: relative;
+    text-shadow: -2px 2px 4px $black-text;
+
   }
   & > .skillGrouping {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap:wrap;
-        flex-wrap:wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    margin-top:auto;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    margin-top: auto;
+    position: relative;
     & > .skillList {
       list-style: none;
       width: -webkit-fit-content;
       width: -moz-fit-content;
       width: fit-content;
-      margin: 10px 10px;
+      margin: 7px 10px;
       -webkit-box-flex: 1;
-          -ms-flex: 1 4 50vw;
-              flex: 1 4 50vw;
-      font-size: 1.1em;
+      -ms-flex: 1 4 50vw;
+      flex: 1 4 50vw;
+      font-size: 1.3em;
+      position: relative;
+      z-index:1;
 
       & > .skill {
-        color:$blue-logo-color;
-        font-size: 1em;
+        color: $blue-logo-color;
+        font-weight: 600;
+        font-size: 0.9em;
+        position: relative;
+        z-index:1;
+        margin-bottom: 2px;
+        
       }
     }
   }
   & > #bottom_images {
-    &>.binary{
+    & > #logos {
+      margin: 10px 0;
+
+      color: $white-background;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+      justify-content: space-evenly;
+      font-size: 1.5em;
       position: relative;
-      z-index:0;
-      padding-top:40px;
-      width: 80vw;
     }
-    &>.hands{
-      position: absolute;
-      width: 80px;
-      left: calc(50% - 40px);
-      background-color: $black-text;
-      bottom:0;
-      padding:0;
-      margin:0;
-      height: 60px;
-      z-index:1;
-    }
-    
-    
   }
 }
