--- a/FrontEnd/src/SocialMedia/Styling/socialMedia.css
+++ b/FrontEnd/src/SocialMedia/Styling/socialMedia.css
@@ -1,4 +1,12 @@
-.socialIcon {
+#socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#socials > li > a > .socialIcon {
   font-size: 1.5em;
+  margin-right: 10px;
+  color: #f1f1f1;
 }
 /*# sourceMappingURL=socialMedia.css.map */
