--- a/FrontEnd/src/SocialMedia/Styling/socialMedia.scss
+++ b/FrontEnd/src/SocialMedia/Styling/socialMedia.scss
@@ -1,3 +1,12 @@
-.socialIcon{
-  font-size:1.5em;
+#socials {
+  display: flex;
+  & > li {
+    & > a {
+      & > .socialIcon {
+        font-size: 1.5em;
+        margin-right: 10px;
+        color: #f1f1f1;
+      }
+    }
+  }
 }
